Fix behaviour of fixed scrollbar

--- a/client/modules/treo-core/css/treo/treo-classic-theme.css
+++ b/client/modules/treo-core/css/treo/treo-classic-theme.css
@@ -15308,7 +15308,7 @@ table.table > thead th > div > a {
     .fixed-scrollbar {
         display: none;
         position: fixed;
-        overflow-x: scroll;
+        overflow-x: auto;
         bottom: 0;
     }
 
